--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,11 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
 ---
 
 <BaseLayout>
-  <h1 class="font-bold text-3xl">
-    Checkout my projects:
-    <a href="http://hyperoot.dev" target="_blank" class="text-blue-400">
-      hyperoot.dev
-    </a>
-  </h1>
+    <div class="h-32 w-full bg-linear-to-r from-rose-400 to-red-400"></div>
+    <h1 class="font-bold text-3xl h-dvh">
+        Checkout my projects:
+        <a href="http://hyperoot.dev" target="_blank" class="text-blue-400">
+            hyperoot.dev
+        </a>
+    </h1>
 </BaseLayout>
